// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prompts snapshots should render Prompts 1`] = `
<DocumentFragment>
  <div
    class="css-1xpffs9 Anchors Anchors--bottom"
    data-test-anchor="bottom"
  />
  <div
    class="css-1xpffs9 Anchors Anchors--top"
    data-test-anchor="top"
  />
</DocumentFragment>
`;

exports[`Prompts snapshots should render all anchors 1`] = `
<DocumentFragment>
  <div
    class="css-1xpffs9 Anchors Anchors--left"
    data-test-anchor="left"
  />
  <div
    class="css-1xpffs9 Anchors Anchors--right"
    data-test-anchor="right"
  />
  <div
    class="css-1xpffs9 Anchors Anchors--bottom"
    data-test-anchor="bottom"
  />
  <div
    class="css-1xpffs9 Anchors Anchors--top"
    data-test-anchor="top"
  />
</DocumentFragment>
`;
